# advent-of-code

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  add_exercise.sh  flake.nix  generate_benchmark_graph.py  go.mod  go.sum  main.go  new.txt  old.txt  printGrid.py  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: actionlint.yml  badges.yml  build.yml  release.yml
.serena/: project.yml
cmd/: benchmark.go  doc.go  graph.go  root.go  selections.go  tasks.go
cmd/aoc21/: 2021.go  2021_test.go  day1.go  day1_test.go  day2.go  day2_test.go  doc.go
cmd/aoc22/: 2022.go  2022_test.go  day1.go  day10.go  day11.go  day12.go  day12_test.go  day13.go  day14.go  day15.go  day16.go  day17.go  day18.go  day19.go  day1_test.go  day2.go  day20.go  day21.go  day22.go  day23.go  day24.go  day25.go  day2_test.go  day3.go  day3_test.go  day4.go  day4_test.go  day5.go  day5_test.go  day6.go  day6_test.go  day7.go  day7_test.go  day8.go  day8_test.go  day9.go  day9_test.go  doc.go
cmd/y2021/: 2021.go
docs/agents/: triage-labels.md
exercises/: doc.go
exercises/2015/: README.md
exercises/2015/09-allInASingleNight/rs/: Cargo.toml
exercises/2015/09-allInASingleNight/rs/src/: solution.rs
exercises/2016/: README.md
exercises/2017/: README.md
exercises/2018/: README.md
exercises/2019/: README.md
exercises/2020/: README.md
exercises/2021/: README.md
exercises/2022/: README.md
lib/aocpy/: vis.py  (+1 more)
template/: cookiecutter.json  go.mod  local_extensions.py
tools/: go.mod  go.sum  tools.go
(+912 files in other folders)
